# code-test-ldci

./: README.md  pyproject.toml
locafeed/: db.sqlite3  manage.py
locafeed/core/: admin.py  api.py  middleware.py  models.py  serializers.py  urls.py  views.py
locafeed/core/migrations/: 0001_initial.py  0002_usersession.py
locafeed/core/templates/core/: api_docs.html  base.html  create_post.html  dashboard.html  home.html  login.html  map.html  map_new.html  profile.html  register.html
locafeed/core/templatetags/: core_filters.py
locafeed/docs/: ARCHITECTURE.md  TASK.md
locafeed/locafeed/: asgi.py  settings.py  urls.py  wsgi.py
